Prevent wrapping of cell content

--- a/styles/web/common/spreadsheet.less
+++ b/styles/web/common/spreadsheet.less
@@ -15,6 +15,7 @@
         position: absolute;
 
         td {
+            white-space: nowrap;
             border-width: 1px;
             border-style: solid;
             box-sizing: border-box;
